hphp/hack/test/typecheck/coeffects/ctx-const-bounds_implicit-lower-defaults.php.exp
File "ctx-const-bounds_implicit-lower-defaults.php", line 9, characters 3-9:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "ctx-const-bounds_implicit-lower-defaults.php", line 8, characters 10-33:
  From this declaration, the context of this function body provides the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, WriteProperty}
  File "ctx-const-bounds_implicit-lower-defaults.php", line 5, characters 38-38:
  But the function being called requires the capability <expr#1>::C
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
